TS-1240: fix race in log buffer queuing code.