proxy/logging/LogBuffer.cc
@@ -129,11 +129,10 @@ LogBufferHeader::log_filename()
   -------------------------------------------------------------------------*/
 
 LogBuffer::LogBuffer(LogObject * owner, size_t size, size_t buf_align, size_t write_align):
-  next_flush(NULL),
-  next_list(NULL),
   m_size(size),
   m_buf_align(buf_align),
-  m_write_align(write_align), m_max_entries(Log::config->max_entries_per_buffer), m_owner(owner)
+  m_write_align(write_align), m_max_entries(Log::config->max_entries_per_buffer), m_owner(owner),
+  m_references(0)
 {
   size_t hdr_size;
 
@@ -159,13 +158,12 @@ LogBuffer::LogBuffer(LogObject * owner, size_t size, size_t buf_align, size_t wr
 }
 
 LogBuffer::LogBuffer(LogObject * owner, LogBufferHeader * header):
-  next_flush(NULL),
-  next_list(NULL),
   m_unaligned_buffer(NULL),
   m_buffer((char *) header),
   m_size(0),
   m_buf_align(LB_DEFAULT_ALIGN),
-  m_write_align(INK_MIN_ALIGN), m_max_entries(0), m_expiration_time(0), m_owner(owner), m_header(header)
+  m_write_align(INK_MIN_ALIGN), m_max_entries(0), m_expiration_time(0), m_owner(owner), m_header(header),
+  m_references(0)
 {
   // This constructor does not allocate a buffer because it gets it as
   // an argument. We set m_unaligned_buffer to NULL, which means that
